--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -258,13 +258,19 @@
 
     position: absolute;
 
-    left: 0; /* Stick to left edge of container */
+    left: 0; /* Stick to left edge */
 
-    top: 50%;
+    top: 0;
 
-    transform: translateY(-50%);
+    height: 100%;
+
+    display: flex;
+
+    align-items: center; /* Vertically center the toggle */
 
     z-index: 20;
+
+    padding-left: 20px; /* Visual spacing */
 
   }
 
@@ -279,3 +285,5 @@
   }
 
 }
+
+
